@@ -1,4 +1,4 @@
-/*	$NetBSD: if_fxp_pci.c,v 1.8.4.4 2002/06/06 19:42:42 he Exp $	*/
+/*	$NetBSD: if_fxp_pci.c,v 1.8.4.5 2002/09/30 14:10:31 itojun Exp $	*/
 
 /*-
  * Copyright (c) 1997, 1998, 1999, 2000, 2001 The NetBSD Foundation, Inc.
@@ -471,6 +471,13 @@ void
 fxp_pci_disable(struct fxp_softc *sc)
 {
 	struct fxp_pci_softc *psc = (void *) sc;
+
+	/*
+	 * for some 82558_A4 and 82558_B0, entering D3 state makes
+	 * media detection disordered.
+	 */
+	if (sc->sc_rev <= FXP_REV_82558_B0)
+		return;
 
 #if 0
 	printf("%s: going to power state D3\n", sc->sc_dev.dv_xname);
